--- a/management/templates/management/classrooms.html
+++ b/management/templates/management/classrooms.html
@@ -22,7 +22,7 @@
 {% endblock %} {% block content %}
 <main class="flex flex-col gap-5 px-24 py-10" x-data="dialogs">
   <section x-show="classroomDialog" class="dialog-backdrop">
-    <div class="dialog">
+    <div class="dialog z-30">
       <h2 class="mb-3 text-xl font-semibold">Criar turma</h2>
       <form action="{% url 'classrooms' %}" method="POST">
         {% csrf_token %}
@@ -132,10 +132,11 @@
       </button>
     </div>
   </header>
+  
   <section class="grid grid-cols-3 gap-6">
-    {% if classrooms %} {% for classroom in classrooms %}
+    {% for classroom in classrooms %}
     <div
-      class="relative flex flex-col gap-1 rounded-2xl bg-gray-100 p-4 shadow"
+      class="relative flex flex-col gap-1 rounded-2xl bg-gray-100 p-4"
       x-data="{ options: false, details: false }"
     >
       <h2 class="mb-1 flex justify-between text-xl font-semibold">
@@ -171,7 +172,8 @@
       </div>
       <div
         x-show="options"
-        class="absolute right-3 top-10 z-10 flex flex-col items-start gap-2 rounded-lg border border-slate-400 bg-gray-100 p-3"
+        class="absolute right-3 top-10 flex flex-col items-start gap-2 rounded-lg border border-slate-400 bg-gray-100 p-3"
+        :class="options && 'z-10'"
         @click.away="() => options = false"
       >
         <button
@@ -199,11 +201,11 @@
         </a>
       </div>
     </div>
-    {% endfor %} {% else %}
+    {% empty %}
     <span class="w-max font-mono text-2xl font-medium text-slate-500">
       Nenhuma turma encontrada :(
     </span>
-    {% endif %}
+    {% endfor %} 
   </section>
 </main>
 {% endblock %}
