--- a/core/templates/core/password/password_reset_form.html
+++ b/core/templates/core/password/password_reset_form.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body class="flex bg-gray-100">
-  <div class="justify-center items-center">
+  <div class="flex items-center pl-[35%]">
     <form method="post" class="space-y-4">
       <h1 class="text-2xl font-semibold mb-4">Solicitar Redefinição de Senha</h1>
         {% csrf_token %}
