--- a/core/static/core/css/turmas.css
+++ b/core/static/core/css/turmas.css
@@ -23,14 +23,14 @@ select {
   @apply pb-2 px-3 flex gap-1 border-b-2 text-color-primary focus:border-color-primary;
 }
 
-article section {
+article section, article form {
   @apply bg-color-bg-lighter rounded-2xl flex-1 p-8;
 }
 
-section#detail label {
+#detail label {
   @apply text-color-secondary text-xl;
 }
 
-section#detail select {
+#detail select {
   @apply w-3/4 text-center;
 }
