--- a/management/templates/management/schedules.html
+++ b/management/templates/management/schedules.html
@@ -103,7 +103,11 @@
 {% endblock %} {% block content %}
 <main class="p-10" x-data="timeTable">
   <h1 class="mb-4 text-4xl font-semibold text-color-primary">
-    Horários - {{ classroom }}
+    Horários
+    {% if user|has_role:'student' %}
+    - {{ classroom }}
+    {% endif %}
+
   </h1>
   <article class="grid grid-cols-2 gap-20">
     <table
