--- a/grades/templates/grades/turmas.html
+++ b/grades/templates/grades/turmas.html
@@ -74,11 +74,7 @@
             id="txt-title"
             class="w-full"
           />
-          <label
-            for="attachment"
-            class="file alt"
-            x-data="{ filename: '' }"
-          >
+          <label for="attachment" class="file alt" x-data="{ filename: '' }">
             <input
               type="file"
               name="attachment"
@@ -88,11 +84,7 @@
             />
             <span x-text="filename || 'Capa'"></span>
           </label>
-          <label
-            for="attachment"
-            class="file alt"
-            x-data="{ filename: '' }"
-          >
+          <label for="attachment" class="file alt" x-data="{ filename: '' }">
             <input
               type="file"
               name="attachment"
@@ -115,7 +107,7 @@
             class="w-full"
           ></textarea>
         </div>
-        <div class="flex justify-between gap-2 mt-1">
+        <div class="mt-1 flex justify-between gap-2">
           <div class="flex items-center gap-2">
             <label for="dt-until">Até:</label>
             <input
@@ -139,7 +131,10 @@
 
           <div class="flex items-center gap-2">
             <label>Menção:</label>
-            <select name="mention" class="h-10 pr-8 pl-3 rounded-full text-center">
+            <select
+              name="mention"
+              class="h-10 rounded-full pl-3 pr-8 text-center"
+            >
               <option>M1</option>
               <option>M2</option>
               <option>M3</option>
@@ -295,58 +290,48 @@
 
     <section class="mt-8 flex flex-col rounded-2xl bg-color-bg-lighter p-7">
       <header class="flex justify-between">
-        <div class="flex gap-4">
-          <h2 class="text-3xl text-color-secondary">Visão Geral</h2>
-          <div
-            class="flex flex-row rounded-full border-2 border-color-secondary px-4 py-1"
+        <h2 class="text-3xl text-color-secondary">Visão Geral</h2>
+        <button class="alt flex">
+          <span class="mr-2">Importar</span>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="h-6 w-6"
           >
-            <span class="mr-2 hidden text-color-secondary sm:block"
-              >Importar</span
-            >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="h-6 w-6 text-color-secondary"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9 8.25H7.5a2.25 2.25 0 00-2.25 2.25v9a2.25 2.25 0 002.25 2.25h9a2.25 2.25 0 002.25-2.25v-9a2.25 2.25 0 00-2.25-2.25H15m0-3l-3-3m0 0l-3 3m3-3V15"
-              />
-            </svg>
-          </div>
-        </div>
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M9 8.25H7.5a2.25 2.25 0 00-2.25 2.25v9a2.25 2.25 0 002.25 2.25h9a2.25 2.25 0 002.25-2.25v-9a2.25 2.25 0 00-2.25-2.25H15m0-3l-3-3m0 0l-3 3m3-3V15"
+            />
+          </svg>
+        </button>
       </header>
 
-      <div class="flex justify-center">
-        <section class="box lg:w-max overflow-x-scroll">
-          <table class="main-table border-separate border-spacing-3 px-2">
-            <thead>
-              <tr>
-                <th><!-- empty --></th>
-                <th>M1</th>
-                <th>M2</th>
-                <th>M3</th>
-                <th>MF</th>
-              </tr>
-            </thead>
-            <tbody>
-              <template x-for="s in students">
-                <tr>
-                  <td x-text="s.username"></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-              </template>
-            </tbody>
-          </table>
-        </section>
-      </div>
+      <table id="vision" class="mt-6 shadow">
+        <thead>
+          <tr>
+            <th></th>
+            <th>M1</th>
+            <th>M2</th>
+            <th>M3</th>
+            <th>MF</th>
+          </tr>
+        </thead>
+        <tbody>
+          <template x-for="s in students" :key="s.pk">
+            <tr>
+              <td x-text="s.username"></td>
+              <td x-text="['I','R','B','MB'][Math.floor(Math.random() * 4)]"></td>
+              <td x-text="['I','R','B','MB'][Math.floor(Math.random() * 4)]"></td>
+              <td x-text="['I','R','B','MB'][Math.floor(Math.random() * 4)]"></td>
+              <td>B</td>
+            </tr>
+          </template>
+        </tbody>
+      </table>
     </section>
   </article>
 
